--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -19,11 +19,13 @@
   position: relative;
   margin: auto;
   padding: 36px;
-  width: 430px;
+  max-width: 430px;
+  width: 100%;
   height: 330px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -42,6 +44,10 @@
   cursor: pointer;
 }
 
+.modal__close:hover {
+  opacity: 0.6;
+}
+
 .modal__heading {
   color: #000;
   font-size: 24px;
@@ -56,7 +62,6 @@
 .modal__form {
   display: block;
   margin-top: 54px;
-  width: 358px;
   padding: 0;
 }
 
@@ -73,6 +78,11 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.2;
+  cursor: pointer;
+}
+
+.modal__button:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 630px) {
